fix form alignment, responsive

--- a/public/css/newstyleuserprofile.css
+++ b/public/css/newstyleuserprofile.css
@@ -4003,7 +4003,7 @@ input[type="radio"]:checked+label span {
 
 .about-date-top-form>div {
     float: left;
-    width: auto;
+    width: 100%;
     margin-right: 5px;
 }
 
